--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
+    "bootstrap": "3.4.1",
+    "jquery": "3.4.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
