--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ yarn-debug.log*
 .framgia-ci-reports/
 .framgia-ci-result.temp.yml
 .browserslistrc
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
