--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.3",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
